--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,6 @@
         }
 
         .icon-container {
-            background-color: #6db079; 
             border-radius: 50%; 
             width: 40px; 
             height: 40px; 
@@ -54,7 +53,7 @@
     <div class="element">
         <div style="display: flex; align-items: center;">
             <!-- Circular Icon in Top Left Inside Box -->
-            <div class="icon-container">
+            <div class="icon-container" style="background-color: #519dc9;">
                 <span class="material-symbols-outlined">wifi_tethering</span>
             </div>
             <!-- Title -->
@@ -69,7 +68,7 @@
     <div class="element">
         <div style="display: flex; align-items: center;">
             <!-- Circular Icon in Top Left Inside Box -->
-            <div class="icon-container" style="background-color: #ff6b6b;">
+            <div class="icon-container" style="background-color: #6a76c7;">
                 <span class="material-symbols-outlined">wifi_tethering_off</span>
             </div>
             <!-- Title -->
