--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twilio Message Sender</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symarginmbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <style>
         .element {
             background: rgba(255, 255, 255, 0.25);
@@ -79,3 +79,4 @@
     </div>
 </body>
 </html>
+
