--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,9 @@
         .container {
             display: flex;
             justify-content: space-between;
-            gap: 2%; /* Adds a 2% gap between the two boxes */
+            gap: 4%; /* Adds a 2% gap between the two boxes */
             margin: 20px auto;
-            width: 90%; /* Overall container width */
+            width: 95%; /* Overall container width */
         }
 
         .element {
@@ -30,14 +30,14 @@
         }
 
         button {
-            background: #434242; /* Matches the web background */
+            background: none;/* background: #434242; */
             color: hsl(0 0% 90%);
-            border: 1px solid rgba(255, 255, 255, 0.18); /* Border color same as box */
+            border: none;/* border: 1px solid rgba(255, 255, 255, 0.18); */
             border-radius: 50%; /* Makes the button circular */
             cursor: pointer;
-            box-shadow: inset -5px -5px 9px rgb(75 73 73 / 37%), inset 5px 5px 9px rgb(0 0 0 / 30%);
-            width: 35px; /* Increased button size (circular) */
-            height: 35px; /* Increased button size (circular) */
+            /* box-shadow: inset -5px -5px 9px rgb(75 73 73 / 37%), inset 5px 5px 9px rgb(0 0 0 / 30%); */
+            width: 25px; /* Increased button size (circular) */
+            height: 25px; /* Increased button size (circular) */
             display: flex; 
             align-items: center; 
             justify-content: center; /* Center the icon inside the button */
@@ -52,8 +52,8 @@
 
         .icon-container {
             border-radius: 50%; 
-            width: 40px; 
-            height: 40px; 
+            width: 33px; 
+            height: 33px; 
             display: flex; 
             align-items: center; 
             justify-content: center; 
